@@ -164,6 +164,9 @@ struct zConfiguration {
 	int watch_away_notification;
 	int uhnames;
 	aNetwork network;
+#ifdef INET6
+	unsigned short default_ipv6_clone_mask;
+#endif /* INET6 */
 };
 
 #ifndef DYNCONF_C
